# axum_jwt_server

./: .env  Cargo.toml
scripts/: generate_entities.sh
sql/: init.sql
src/: jwt.rs  main.rs
src/handlers/: auth_handler.rs  user_handler.rs
src/models/: auth_model.rs  mod.rs
src/orm/: douyin_announce.rs  douyin_browser.rs  douyin_config.rs  douyin_like.rs  douyin_object.rs  douyin_qrcode.rs  douyin_task.rs  douyin_version_object.rs  mod.rs  prelude.rs  user.rs
src/routes/: auth_router.rs  mod.rs  user_route.rs
