[package]
name = "llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
bcrypt = "0.16.0"
chrono = "0.4.39"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
service_utils_rs = { version = "0.1.2", features = ["jwt"] }
sea-orm = { version = "1.1.3", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
validator = { version = "0.18.1", features = ["derive"] }
serde_json = "1"
